# proof

./: .README.md.swp  .gitignore  CMakeLists.txt  README.md
CG_Beleg.xcodeproj/: project.pbxproj
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
source/CGTutorial/resources/: StandardShading.fragmentshader  StandardShading.vertexshader  TransformVertexShader.vertexshader  Uebung5.txt  Uebung6.txt  Uebung7.txt
source/CGTutorial/resources/Car/: Chevrolet_Camaro_SS_1.3ds  Chevrolet_Camaro_SS_6.mtl  Chevrolet_Camaro_SS_a1.dae  Chevrolet_Camaro_SS_bkp.blend  Chevrolet_Camaro_SS_bkp3.3ds  Wind.3ds
source/CGTutorial/resources/Street/: StreetCurveA90.fbx  street.mb
source/CGTutorial/resources/Street_and_landscape/: StreetCurveB90.fbx  StreetStraight.fbx  checkpoint.fbx  checkpoint_collider.fbx  checkpoint_texture.ai  collider.fbx  collider_checkpoint.fbx  collider_invisible.fbx  finish_line.fbx  finish_line2.fbx  grass.mb  landscape.fbx  street.mb
source/CGTutorial/resources/Street_and_landscape/.mayaSwatches/: checkpoint_texture.png_hcm.swatch  empty.png_hcm.swatch  finish_line_texture.jpg_hcm.swatch  finish_line_texture_half.jpg_hcm.swatch  grass.jpg_hcm.swatch  rua.jpg_hcm.swatch
source/CGTutorial/source/: Behaviour.hpp  CGTutorial.cpp  Car.cpp  Car.hpp  CarGhost.cpp  CarGhost.hpp  Constants.h  GhostController.cpp  GhostController.hpp  Input.hpp  Mesh.h  Model.cpp  Model.h  Model.hpp  Object3D.h  StreetObject.h  Text.cpp  Text.hpp  main.cpp  objects.cpp  shader.cpp  text2D.cpp  texture.cpp  texture.hpp
source/CGTutorial/source/res/shaders/: skybox.frag  skybox.vs
